tests/baselines/reference/es5ModuleWithoutModuleGenTarget.errors.txt
tests/cases/compiler/es5ModuleWithoutModuleGenTarget.ts(1,14): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/compiler/es5ModuleWithoutModuleGenTarget.ts (1 errors) ====
    export class A
                 ~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    {
        constructor ()
        {
        }
    
        public B()
        {
            return 42;
        }
    }